# xml-tree-parser

./: CHANGELOG.md  LICENSE  fourmolu.yaml  parserDsl.cabal  small.xml  test.json  test.xml
app/: Main.hs  Parser.hs
