cabal-version:      3.0
name:               parserDsl
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Silas de Jong
maintainer:         andorthekid@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable parserDsl
    import:           warnings
    main-is:          Main.hs
    other-modules:    Parser
    -- other-extensions:
    default-extensions: OverloadedStrings
                      , TypeApplications
    build-depends:    base ^>=4.20.0.0
                    , lens
                    , bytestring
                    , xeno
                    , text
                    , fmt
    hs-source-dirs:   app
    default-language: Haskell2010
